python/cudf/bindings/cudf_cpp.pxd


    cdef gdf_error gdf_left_join(
                             gdf_column **left_cols,
                             int num_left_cols,
                             int left_join_cols[],
                             gdf_column **right_cols,
                             int num_right_cols,
                             int right_join_cols[],
                             int num_cols_to_join,
                             int result_num_cols,
                             gdf_column **result_cols,
                             gdf_column * left_indices,
                             gdf_column * right_indices,
                             gdf_context *join_context)

    cdef gdf_error gdf_full_join(
                             gdf_column **left_cols,
                             int num_left_cols,
                             int left_join_cols[],
                             gdf_column **right_cols,
                             int num_right_cols,
                             int right_join_cols[],
                             int num_cols_to_join,
                             int result_num_cols,
                             gdf_column **result_cols,
                             gdf_column * left_indices,
                             gdf_column * right_indices,
                             gdf_context *join_context)

    cdef gdf_error gdf_hash_partition(int num_input_cols,
                                 gdf_column * input[],
                                 int columns_to_hash[],
                                 int num_cols_to_hash,
                                 int num_partitions,
                                 gdf_column * partitioned_output[],
                                 int partition_offsets[],
                                 gdf_hash_func hash)

    cdef gdf_error gdf_prefixsum_generic(gdf_column *inp, gdf_column *out, int inclusive)
    cdef gdf_error gdf_prefixsum_i8(gdf_column *inp, gdf_column *out, int inclusive)
    cdef gdf_error gdf_prefixsum_i32(gdf_column *inp, gdf_column *out, int inclusive)
    cdef gdf_error gdf_prefixsum_i64(gdf_column *inp, gdf_column *out, int inclusive)

    cdef gdf_error gdf_hash(int num_cols, gdf_column **input, gdf_hash_func hash, gdf_column *output)

    cdef gdf_error gdf_sin_generic(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_sin_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_sin_f64(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_cos_generic(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cos_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cos_f64(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_tan_generic(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_tan_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_tan_f64(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_asin_generic(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_asin_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_asin_f64(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_acos_generic(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_acos_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_acos_f64(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_atan_generic(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_atan_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_atan_f64(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_exp_generic(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_exp_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_exp_f64(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_log_generic(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_log_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_log_f64(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_sqrt_generic(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_sqrt_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_sqrt_f64(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_ceil_generic(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_ceil_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_ceil_f64(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_floor_generic(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_floor_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_floor_f64(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_cast_generic_to_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i8_to_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i32_to_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i64_to_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_f32_to_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_f64_to_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_date32_to_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_date64_to_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_timestamp_to_f32(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_cast_generic_to_f64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i8_to_f64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i32_to_f64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i64_to_f64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_f32_to_f64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_f64_to_f64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_date32_to_f64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_date64_to_f64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_timestamp_to_f64(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_cast_generic_to_i8(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i8_to_i8(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i32_to_i8(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i64_to_i8(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_f32_to_i8(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_f64_to_i8(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_date32_to_i8(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_date64_to_i8(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_timestamp_to_i8(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_cast_generic_to_i32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i8_to_i32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i32_to_i32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i64_to_i32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_f32_to_i32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_f64_to_i32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_date32_to_i32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_date64_to_i32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_timestamp_to_i32(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_cast_generic_to_i64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i8_to_i64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i32_to_i64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i64_to_i64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_f32_to_i64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_f64_to_i64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_date32_to_i64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_date64_to_i64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_timestamp_to_i64(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_cast_generic_to_date32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i8_to_date32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i32_to_date32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i64_to_date32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_f32_to_date32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_f64_to_date32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_date32_to_date32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_date64_to_date32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_timestamp_to_date32(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_cast_generic_to_date64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i8_to_date64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i32_to_date64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i64_to_date64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_f32_to_date64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_f64_to_date64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_date32_to_date64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_date64_to_date64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_timestamp_to_date64(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_cast_generic_to_timestamp(gdf_column *input, gdf_column *output, gdf_time_unit time_unit)
    cdef gdf_error gdf_cast_i8_to_timestamp(gdf_column *input, gdf_column *output, gdf_time_unit time_unit)
    cdef gdf_error gdf_cast_i32_to_timestamp(gdf_column *input, gdf_column *output, gdf_time_unit time_unit)
    cdef gdf_error gdf_cast_i64_to_timestamp(gdf_column *input, gdf_column *output, gdf_time_unit time_unit)
    cdef gdf_error gdf_cast_f32_to_timestamp(gdf_column *input, gdf_column *output, gdf_time_unit time_unit)
    cdef gdf_error gdf_cast_f64_to_timestamp(gdf_column *input, gdf_column *output, gdf_time_unit time_unit)
    cdef gdf_error gdf_cast_date32_to_timestamp(gdf_column *input, gdf_column *output, gdf_time_unit time_unit)
    cdef gdf_error gdf_cast_date64_to_timestamp(gdf_column *input, gdf_column *output, gdf_time_unit time_unit)
    cdef gdf_error gdf_cast_timestamp_to_timestamp(gdf_column *input, gdf_column *output, gdf_time_unit time_unit)

    cdef gdf_error gdf_extract_datetime_year(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_extract_datetime_month(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_extract_datetime_day(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_extract_datetime_hour(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_extract_datetime_minute(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_extract_datetime_second(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_add_generic(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_add_i32(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_add_i64(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_add_f32(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_add_f64(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
